Add retries to the producer in case of failures

--- a/producer/src/main/resources/application.yml
+++ b/producer/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      retries: 5
 server:
   port: 8081
 
